fix: some layout issues with padding and alignment between elements

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,7 +6,26 @@ body {
     font-size: var(--step-0);
     font-weight: 425;
     background-color: var(--color-bg);
-    color: var(--color-fg)
+    color: var(--color-fg);
+
+    > nav {
+        display: flex;
+        max-width: 65rem;
+        margin-inline: auto;
+        font-size: var(--step-1);
+        justify-content: space-between;
+        padding: var(--space-2xs) var(--space-s-m);
+    }
+}
+
+main .main-wrapper {
+    min-width: 360px;
+    max-width: 65rem;
+    margin-inline: auto;
+    padding: var(--space-s-m);
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
 
 details {
@@ -55,7 +74,7 @@ nav.toc ul {
 
 article {
     header {
-        max-width: 66ch;
+        margin-inline: auto;
         padding-block-end: 3em;
 
         h1 {
